[package]
name = "esp32_c3_examples"
version = "0.1.0"
authors = ["sunwenming <645187582@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.2.0"

riscv-rt = { version = "0.9", optional = true }
# self add
esp-hal-common = { version = "0.2.0", features = [
  "esp32c3",
], git = "https://github.com/esp-rs/esp-hal.git" }

[dev-dependencies]
esp-println = { version = "0.3.1", features = ["esp32c3"] }
embedded-graphics = "0.7.1"
esp-backtrace = { version = "0.3.0", features = [
  "esp32c3",
  "panic-handler",
  "print-uart",
] }
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
max7219-driver = { version = "0.1.0", git = "https://github.com/hello-embedded/max7219-driver.git" }
dht-sensor = { version = "0.2.1" }

[features]
default = ["rt"]
rt = ["riscv-rt"]
smartled = ["esp-hal-common/smartled"]

[[example]]
name = "rgb"
required-features = ["smartled"]
